# Backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: __init__.py  config.py  database.py  deps.py  generation_options.py  main.py  models.py  schemas.py  security.py  serializers.py
app/routers/: ai.py  auth.py  format.py  gmail.py  history.py  personas.py  users.py
app/services/: google.py  people.py  solar.py
docs/: CURRENT_FEATURE_SPEC.md  SPEC.md
migrations/: env.py
migrations/versions/: 20260523_0001_initial_schema.py  20260523_0002_normalize_tone_length_scales.py  20260528_0003_history_persona_snapshots.py  20260529_0004_draft_revision_messages.py
tests/: test_api.py
