[project]
name = "mello-api"
version = "0.1.0"
description = "FastAPI backend for the Mello AI mail assistant"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42,<47",
  "email-validator>=2.2,<3",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "itsdangerous>=2.2,<3",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langchain-openai>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "langsmith>=0.3.0",
  "pydantic-settings>=2.3,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
